--- a/notebooks/exploracao.ipynb
+++ b/notebooks/exploracao.ipynb
@@ -982,12 +982,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Podemos observar se o t-SNE no espaço latente mostra algum agrupamento por classe semelhante ao original.  \n",
-    "Também comparamos a perda de reconstrução do AE com dimensão latente 10 vs 32, notando se há melhora na reconstrução ao aumentar a dimensionalidade do espaço latente.\n",
+    "Foi possivel observar se o t-SNE no espaço latente mostra algum agrupamento por classe semelhante ao original.  \n",
+    "Ao comparar a perda de reconstrução do AE com dimensão latente 10 vs 32, nota-se que há melhora na reconstrução ao aumentar a dimensionalidade do espaço latente.\n",
     "\n",
     "Esse tipo de exploração nos ajuda a entender:\n",
     "- A qualidade da representação latente aprendida pelo AE (através do t-SNE).\n",
-    "- O trade-off entre capacidade de compressão (dimensão latente menor) e qualidade da reconstrução."
+    "- O trade-off entre capacidade de compressão (dimensão latente menor) e qualidade da reconstrução.\n",
+    "\n",
+    "\n",
+    "Além disso, ao olhar o resultados de PSNR de AE, DAE e VAE no conjunto de teste, vemos que o melhor é o AE."
    ]
   }
  ],
