--- a/notebooks/exploracao.ipynb
+++ b/notebooks/exploracao.ipynb
@@ -642,8 +642,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vamos treinar um outro AE com uma dimensão latente diferente (por exemplo, 32) e comparar as perdas.  \n",
-    "A hipótese: Aumentar a dimensão latente pode melhorar a reconstrução (menor perda), mas diminui a capacidade de compressão."
+    "Será treinado um outro AE com uma dimensão latente diferente (por exemplo, 32) e comparar as perdas.  \n",
+    "É esperado que aumentar a dimensão latente pode melhorar a reconstrução (menor perda), mas diminui a capacidade de compressão."
    ]
   },
   {
@@ -695,7 +695,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Observamos se aumentar a dimensão latente reduziu a perda de reconstrução."
+    "É observado que, se aumentar a dimensão latente reduziu a perda de reconstrução."
    ]
   },
   {
@@ -709,7 +709,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vamos agora comparar a estrutura dos dados no espaço original vs. o espaço latente do AE(10).\n",
+    "Aqui será comparado a estrutura dos dados no espaço original vs. o espaço latente do AE(10).\n",
     "\n",
     "Passos:\n",
     "1. Pegamos um subconjunto de dados (por exemplo 1000 amostras) do conjunto de teste.\n",
@@ -717,7 +717,7 @@
     "3. Aplicamos t-SNE para reduzir para 2D nos dois casos.\n",
     "4. Plotamos com cores baseadas na classe.\n",
     "\n",
-    "Esperamos ver se a estrutura latente mantém algum agrupamento semelhante ao espaço original."
+    "É esperado ver se a estrutura latente mantém algum agrupamento semelhante ao espaço original."
    ]
   },
   {
